k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: indichess
  labels:
    name: indichess
    environment: production
