k8s/05-match-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-db
  namespace: indichess
spec:
  selector:
    matchLabels:
      app: match-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: match-db
    spec:
      containers:
        - name: match-db
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: match-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: match-db-storage
          persistentVolumeClaim:
            claimName: match-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: match-db
  namespace: indichess
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: match-db
