k8s/07-config-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
  namespace: indichess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
        - name: config-service
          image: indichess-config-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: indichess
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: config-service
